tests/fail/intrinsics/ptr_offset_0_plus_0.stderr
error: Undefined Behavior: pointer arithmetic failed: null pointer is not a valid pointer
  --> RUSTLIB/core/src/ptr/mut_ptr.rs:LL:CC
   |
LL |         unsafe { intrinsics::offset(self, count) as *mut T }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pointer arithmetic failed: null pointer is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `std::ptr::mut_ptr::<impl *mut i32>::offset` at RUSTLIB/core/src/ptr/mut_ptr.rs:LL:CC
note: inside `main` at $DIR/ptr_offset_0_plus_0.rs:LL:CC
  --> $DIR/ptr_offset_0_plus_0.rs:LL:CC
   |
LL |     let _x = unsafe { x.offset(0) }; // UB despite offset 0, NULL is never inbounds
   |                       ^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

